Changed color-secondary, fixed spacing in create component

--- a/src/app/Shared/navbar/navbar.component.scss
+++ b/src/app/Shared/navbar/navbar.component.scss
@@ -34,7 +34,7 @@
         &:hover:not(.active){
             transform: translateY(-2px);
             color: #006cf8;
-            background: #4596ff52
+            background: #b9d7ff
         }
     }
 }
